--- a/teodora-elasticsearch/src/main/resources/templates/searchpage.html
+++ b/teodora-elasticsearch/src/main/resources/templates/searchpage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <head>
         <meta charset="UTF-8"></meta>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"></link>
@@ -41,7 +42,10 @@
                 <div class="navbar-nav mr-auto">
                     <a class="nav-item nav-link" href="/" >Dodavanje dokumenata</a>
                     <a class="nav-item nav-link" href="/search/1/" style="color: rgb(255,255,255)">Pretraga</a>
-                    <a class="nav-item nav-link" href="/manage/">Upravljanje</a>
+                    <a th:if="${adminLogged}" class="nav-item nav-link" href="/manage/">Upravljanje</a>
+                    <ul class="navbar-nav mr-auto">
+                        <li sec:authorize="isAuthenticated()"><a class="nav-item nav-link" th:href="@{/logout}">Odjavi se</a></li>
+                    </ul>
                 </div>
             </div>
         </nav>
@@ -165,5 +169,9 @@
                 </div>
             </div>
         </div>
+        <script type="text/javascript"
+        th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
+        <script type="text/javascript"
+        th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
     </body>
 </html>
